🔐 ФИНАЛ: Профессиональная подготовка к деплою
✅ БЕЗОПАСНОСТЬ:
- Убраны API ключи из next.config.js (были доступны в браузере!)
- Все секреты только в переменных окружения
- Webpack fallbacks для защиты серверных модулей
- Security headers в netlify.toml (XSS, clickjacking защита)
- Подробная документация по безопасности

✅ ОПТИМИЗАЦИИ:
- Убран устаревший swcMinify (по умолчанию в Next.js 15)
- Настроено кэширование статических ассетов (1 год)
- Оптимизация изображений (AVIF, WebP)
- Сжатие включено, poweredByHeader скрыт
- Production build успешен (0 ошибок)

✅ ДОКУМЕНТАЦИЯ:
- ENVIRONMENT_SETUP.md - настройка переменных окружения
- SECURITY_DEPLOY_CHECKLIST.md - чеклист безопасности
- DEPLOY_NOW.md - быстрая инструкция по деплою
- Обновлен netlify.toml с security headers

🚀 ГОТОВО К ПРОДАКШЕНУ!
Проект профессионально оформлен, защищен и оптимизирован.
Можно деплоить на Netlify через GitHub!

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,11 +5,43 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_FLAGS = "--legacy-peer-deps"
 
-# Next.js Runtime - Essential for Next.js 13+
+# Next.js Runtime - Essential for Next.js 15+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
-# Environment variables (добавить OPENAI_API_KEY через Netlify Dashboard)
+# Редиректы для корректной работы Next.js
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  force = false
+
+# Заголовки безопасности
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
+
+# Кэширование статических ассетов
+[[headers]]
+  for = "/_next/static/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/generated/*"
+  [headers.values]
+    Cache-Control = "public, max-age=3600"
+
+# Environment variables (добавить через Netlify Dashboard)
+# Обязательные переменные:
+# - OPENAI_API_KEY
+# - REPLICATE_API_TOKEN  
+# - NEXT_PUBLIC_BASE_URL
 # https://app.netlify.com/sites/YOUR-SITE/settings/deploys#environment
 
